# soccer_prediction

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.intelag_eigen_solver/report/: 2026-07-11_01-57-45__cozy_corner_cafe.md  2026-07-11_02-20-08__cozy_corner_cafe.html  2026-07-11_02-23-16__cozy_corner_cafe.html  2026-07-11_02-23-16__cozy_corner_cafe.md  2026-07-11_03-55-44__downtown_bistro.html  2026-07-11_03-55-44__downtown_bistro.md
docs/: api.md  betting-strategy-math.md  data-sources.md  models.md
soccer_prediction/: __init__.py  __main__.py  public.py  version.py
soccer_prediction/calibration/: __init__.py  backtest.py  metrics.py
soccer_prediction/cli/: __init__.py  backtest_cmd.py  main.py  predict_cmd.py
soccer_prediction/config/: __init__.py  defaults.yaml  loader.py
soccer_prediction/datasources/: __init__.py  api_football.py  base.py  cache.py  errors.py  football_data_csv.py  international_results.py  statsbomb.py  worldcup_open.py
soccer_prediction/example/: __init__.py  _data.py  fixture_example.py  switzerland_colombia_example.py  wc2026_example.py  worldcup2026_live.py
soccer_prediction/features/: __init__.py  context.py  morale.py  rates.py
soccer_prediction/ingest/: __init__.py  normalize.py  validate.py
soccer_prediction/models/: AGENTS.md  __init__.py  match.py  player.py  prediction.py  strategy.py  team.py
soccer_prediction/predictors/: __init__.py  analysis.py  base.py  bivariate_poisson.py  cards.py  corners.py  dixon_coles.py  ensemble.py  half_time.py  knockout.py  markets.py  monte_carlo.py  negative_binomial.py  poisson.py  scorers.py
soccer_prediction/reporting/: __init__.py  forecast_report.py  html_analysis.py  html_components.py  (+11 more)
tests/: AGENTS.md  __init__.py  conftest.py  test_advanced_models.py  test_api_football.py  test_backtest.py  test_cache.py  test_cards.py  test_cli.py  test_config.py  test_corners.py  test_datasources.py  test_dixon_coles.py  test_example.py  test_football_data_csv.py  test_goal_tempo.py  test_half_time.py  test_ingest.py  test_international_results.py  test_knockout.py  test_market_optimizer.py  test_markets.py  test_metrics.py  test_models.py  test_morale.py  test_network_context.py  test_network_rating.py  test_poisson.py  test_predictor_registry.py  test_public.py  test_rates.py  test_reporting.py  test_score_hedge.py  test_score_optimizer.py  test_scorers.py  test_smoke.py  test_strategy_allocation.py  test_strategy_cli.py  test_strategy_live.py  test_strategy_models.py  (+5 more)
(+35 files in other folders)
